[package]
name = "vortex_dynamics"
version = "0.1.0"
authors = ["Christian Kuhl <christian.kuhl84@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = { version = "*", optional = true }
ndarray = "0.13.1"
wasm-bindgen = "0.2.63"
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }

[features]
default = ["console_error_panic_hook"]

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
opt-level = "s"
lto = true
